test/parallel/taskPar/cassella/too-many-intents.good
too-many-intents.chpl:2: error: 'with' clause includes 'bruce' more than once.
