test/parallel/taskPar/cassella/too-many-intents.chpl
var bruce: int;
sync begin with(ref bruce, const ref bruce, in bruce) { bruce = 7; }

writeln("now ", bruce);
